--- a/application/views/scripts/_layouts/backend.phtml
+++ b/application/views/scripts/_layouts/backend.phtml
@@ -45,6 +45,7 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 <script src="<?php echo $baseUrl;?>/js/jquery.js"></script>
 <script src="<?php echo $baseUrl;?>/bootstrap/js/bootstrap.min.js"></script>
 <script src="<?php echo $baseUrl;?>/js/prettyPhoto.js"></script>
+<script src="<?php echo $baseUrl;?>/js/file.js"></script>
 <?php echo $layoutManager->getAdditionalJavascriptString()?>
 <?php echo $layoutManager->getContentScript(); ?>
 <script type="text/javascript">
