--- a/application/views/scripts/manage/movies.phtml
+++ b/application/views/scripts/manage/movies.phtml
@@ -1,4 +1,40 @@
-<br /><br />
+<?php 
+	$baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
+?>
+
 <div id="view-content">
-	<p>View script for controller <b>Manage</b> and script/action name <b>movies</b></p>
+	<a href="<?php echo "$baseUrl/manage/add-new-movie";?>" class="btn btn-primary">Add new movie</a>
 </div>
+<br />
+<table class="table table-bordered table-condense">
+	<thead>
+		<tr>
+			<th width="20%">Name</th>
+			<th width="20%">Friendly Name</th>
+			<th width="30%">Description</th>
+			<th width="10%">Type</th>
+			<th width="20%">action</th>
+		</tr>
+	</thead>
+	<tbody>
+	<?php 
+	foreach ($this->movies as $movie):
+	/* @var $movie \Models\Entities\Movie */
+	?>
+		<tr <?php if(! $movie->getIsActive()) echo 'class="danger"';?>>
+			<td><?php echo $movie->getMovieName() ?></td>
+			<td><?php echo $movie->getFriendlyName() ?></td>
+			<td><?php echo $movie->getDescription() ?></td>
+			<td>type</td>
+			<?php if(!$movie->getIsActive()){?>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage-processor/restore-movie?id=".$movie->getId();?>" class="btn btn-primary">Restore</a></td>
+			<?php }else{?>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage/update-movie?id=".$movie->getId();?>" class="btn btn-primary">Update</a>
+			 	<a href="<?php echo "$baseUrl/manage-processor/delete-movie?id=".$movie->getId();?>" class="btn btn-primary">Delete</a></td>
+			<?php }?>
+			</tr>	
+	<?php 
+	endforeach;	
+	?>
+	</tbody>
+</table>
