--- a/application/views/scripts/manage/servers.phtml
+++ b/application/views/scripts/manage/servers.phtml
@@ -6,9 +6,9 @@
 <table class="table table-bordered table-condense">
 	<thead>
 		<tr>
-			<th>id</th>
-			<th>url</th>
-			<th>#action</th>
+			<th width="10%" class="text-center">id</th>
+			<th width="70%">url</th>
+			<th width="20%">#action</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -16,12 +16,16 @@
 	foreach ($this->servers as $server):
 	/* @var $server \Models\Entities\Server */
 	?>
-		<tr>
-			<td><?php echo $server->getId() ?></td>
+		<tr <?php if(! $server->getIsActive()) echo 'class="danger"';?>>
+			<td class="text-center"><?php echo $server->getId() ?></td>
 			<td><?php echo $server->getUrl() ?></td>
-			<td><a href="<?php echo "$baseUrl/manage/update-server?id=".$server->getId();?>">Update</a>
-			/ <a href="<?php echo "$baseUrl/manage/update-server?id=".$server->getId();?>">Delete</a></td>
-		</tr>	
+			<?php if(!$server->getIsActive()){?>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage-processor/restore-server?id=".$server->getId();?>" class="btn btn-primary">Restore</a></td>
+			<?php }else{?>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage/update-server?id=".$server->getId();?>" class="btn btn-primary">Update</a>
+			 	<a href="<?php echo "$baseUrl/manage-processor/delete-server?id=".$server->getId();?>" class="btn btn-primary">Delete</a></td>
+			<?php }?>
+			</tr>	
 	<?php 
 	endforeach;	
 	?>
