--- a/application/views/scripts/manage/update-type.phtml
+++ b/application/views/scripts/manage/update-type.phtml
@@ -10,7 +10,7 @@
  <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Type</label>
     <div class="col-sm-10">      
-    <input type="text" class="form-control" id="inputEmail3" placeholder="Type" name="type" value="<?php echo $this->type->getTypeName() ?>">
+    <input type="text" class="form-control" id="inputEmail3" placeholder="Type" name="type" value="<?php echo $this->type->getName() ?>">
     </div>
   </div>
  <div class="form-group">
