--- a/application/views/scripts/manage/movies.phtml
+++ b/application/views/scripts/manage/movies.phtml
@@ -4,7 +4,9 @@
 
 <div id="view-content">
 	<a href="<?php echo "$baseUrl/manage/add-new-movie";?>" class="btn btn-primary">Add new movie</a>
+	<a href="<?php echo "$baseUrl/manage/test";?>" class="btn btn-primary">TEST</a>
 </div>
+
 <br />
 <table class="table table-bordered table-condense">
 	<thead>
