before fix dirty work tree

--- a/application/views/scripts/_global/backend_navbar.phtml
+++ b/application/views/scripts/_global/backend_navbar.phtml
@@ -10,9 +10,9 @@
          -->
         <ul class="nav navbar-nav">
             <li><a href="<?php echo $baseUrl;?>/manage/movies">หนัง</a></li>
-            <li><a href="<?php echo $baseUrl;?>/manage/servers">เซอร์เวอร์</a></li>
+            <!-- <li><a href="<?php echo $baseUrl;?>/manage/servers">เซอร์เวอร์</a></li> -->
             <li><a href="<?php echo $baseUrl;?>/manage/types">ประเภท</a></li>
-            <li><a href="<?php echo $baseUrl;?>/manage/upload-new-movie">Upload Video</a></li>
+            <!-- <li><a href="<?php echo $baseUrl;?>/manage/upload-new-movie">Upload Video</a></li>-->
         </ul>
         
         <ul class="nav navbar-nav pull-right">
