--- a/application/views/scripts/manage/add-new-type.phtml
+++ b/application/views/scripts/manage/add-new-type.phtml
@@ -1,14 +1,14 @@
 <?php $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();?>
 <br />
-<h3 class="text-center">Add new type</h3>
+<h3 class="text-center">Add new Category</h3>
 <br />
 <form class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/add-new-type"?>">
 
 
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Type</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Category Name</label>
     <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputEmail3" placeholder="Movie Type" name="type">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="Movie Category Name" name="type">
     </div>
   </div>
   <div class="form-group">
@@ -20,8 +20,8 @@
   
   
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Add</button>
+    <div class="col-sm-offset-2 col-sm-10 text-center">
+      <button type="submit" class="btn btn-success" style="width:150px;">Add</button>
     </div>
   </div>
 </form>
