--- a/application/views/scripts/manage/update-movie.phtml
+++ b/application/views/scripts/manage/update-movie.phtml
@@ -23,49 +23,51 @@
       <input type="text" class="form-control" id="inputEmail3" placeholder="Description" name="description" value="<?php echo $this->movie->getDescription() ?>">
     </div>
   </div>
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Type</label>
+ <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Category</label>
     <div class="col-sm-10">
-      	<select class="form-control">
-      		<option value="1">Punk</option>
-      		<option value="2">Rock</option>
-      		<option value="3">Heavy</option>
+      	<select class="form-control" name="category">
+      	<?php 
+		foreach ($this->categories as $category):
+		/* @var $category \Models\Entities\Category */
+		?>
+      		<option value="<?php echo $category->getId() ?>" <?php echo ($category->getId()==$this->movie->getCategory()->getId()) ? "selected" : "" ?>><?php echo $category->getName() ?></option>
+      	<?php endforeach;	?>
       	</select>
     </div>
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality File</label>
     <div class="col-sm-10">
-      <select class="form-control">
-      		<option value="1">Choose Movie</option>
-      		<option value="2">Server 2</option>
-      		<option value="3">Server 3</option>
-      	</select>
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality File URL" name="lowQualityFile" value="<?php echo $this->movie->getLowQualityFile() ?>">
     </div>
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">High Quality</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality Cover</label>
     <div class="col-sm-10">
-      <select class="form-control">
-      		<option value="1">Choose Movie</option>
-      		<option value="2">Server 2</option>
-      		<option value="3">Server 3</option>
-      	</select>
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality Cover URL" name="lowQualityCover" value="<?php echo $this->movie->getLowQualityCover() ?>">
     </div>
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">&nbsp;</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">High Quality File</label>
     <div class="col-sm-10">
-      <a href="<?php echo "$baseUrl/manage/add-new-file";?>" class="btn btn-primary">Upload new file</a>
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality File URL" name="highQualityFile" value="<?php echo $this->movie->getHighQualityFile() ?>">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">High Quality Cover</label>
+    <div class="col-sm-10">
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality Cover URL" name="highQualityCover" value="<?php echo $this->movie->getHighQualityCover() ?>">
     </div>
   </div>
   
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10 text-center">
-      <button type="submit" class="btn btn-default">Update</button>
+      <button type="submit" class="btn btn-success" style="width:150px">Update</button>
     </div>
   </div>
 </form>
