--- a/application/views/scripts/manage/update-type.phtml
+++ b/application/views/scripts/manage/update-type.phtml
@@ -22,8 +22,8 @@
   
   
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-10">
-      <button type="submit" class="btn btn-default">Update</button>
+    <div class="col-sm-offset-2 col-sm-10 text-center">
+      <button type="submit" class="btn btn-success">Update</button>
     </div>
   </div>
 </form>
