--- a/application/views/scripts/manage/add-new-movie.phtml
+++ b/application/views/scripts/manage/add-new-movie.phtml
@@ -2,7 +2,7 @@
 <br />
 <h3 class="text-center">Add new Movie</h3>
 <br />
-<form id="form" class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/add-new-movie"?>">
+<form id="form" class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/add-new-movie"?>" enctype="multipart/form-data">
 
 
   <div class="form-group">
@@ -45,13 +45,6 @@
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality Cover</label>
-    <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality Cover URL" name="lowQualityCover">
-    </div>
-  </div>
-  
-  <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">High Quality File</label>
     <div class="col-sm-10">
     	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality File URL" name="highQualityFile">
@@ -59,9 +52,16 @@
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">High Quality Cover</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Cover Image</label>
     <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality Cover URL" name="highQualityCover">
+    	<input type="file" name="cover" class="form-control">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Screen Shot</label>
+    <div class="col-sm-10">
+    	<input type="file" name="screenShot[]" multiple="multiple" class="form-control">
     </div>
   </div>
   
