--- a/application/views/scripts/manage/update-movie.phtml
+++ b/application/views/scripts/manage/update-movie.phtml
@@ -1,8 +1,8 @@
 <?php $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();?>
 <br />
-<h3 class="text-center">Update movie</h3>
+<h3 class="text-center">Update Movie</h3>
 <br />
-<form class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/update-movie"?>">
+<form class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/update-movie"?>" enctype="multipart/form-data">
 <input type="hidden" name="id" value="<?php echo $this->movie->getId() ?>" />
 
   <div class="form-group">
@@ -45,23 +45,23 @@
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality Cover</label>
-    <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality Cover URL" name="lowQualityCover" value="<?php echo $this->movie->getLowQualityCover() ?>">
-    </div>
-  </div>
-  
-  <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">High Quality File</label>
     <div class="col-sm-10">
     	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality File URL" name="highQualityFile" value="<?php echo $this->movie->getHighQualityFile() ?>">
     </div>
   </div>
   
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">High Quality Cover</label>
+   <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Cover Image</label>
     <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality Cover URL" name="highQualityCover" value="<?php echo $this->movie->getHighQualityCover() ?>">
+    	<input type="file" name="cover" class="form-control">
+    </div>
+  </div>
+  
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Screen Shot</label>
+    <div class="col-sm-10">
+    	<input type="file" name="screenShot[]" multiple="multiple" class="form-control">
     </div>
   </div>
   
