--- a/application/views/scripts/manage/update-type.phtml
+++ b/application/views/scripts/manage/update-type.phtml
@@ -1,6 +1,6 @@
 <?php $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();?>
 <br />
-<h3 class="text-center">Update type</h3>
+<h3 class="text-center">Update Category</h3>
 <br />
 <form class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/update-type"?>">
 
