--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,43 +1,200 @@
-<style>
-    a:link,
-    a:visited
-    {
-        color: #0398CA;
-    }
+<?php 
+	$baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
+?>
 
-    span#zf-name
-    {
-        color: #91BE3F;
-    }
-
-    div#welcome
-    {
-        color: #FFFFFF;
-        background-image: url(http://framework.zend.com/images/bkg_header.jpg);
-        width:  600px;
-        height: 400px;
-        border: 2px solid #444444;
-        overflow: hidden;
-        text-align: center;
-    }
-
-    div#more-information
-    {
-        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
-        height: 100%;
-    }
-</style>
-<div id="welcome">
-    <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
-
-    <h3>This is your project's main page</h3>
-
-    <div id="more-information">
-        <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
-        <p>
-            Helpful Links: <br />
-            <a href="http://framework.zend.com/">Zend Framework Website</a> |
-            <a href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
-        </p>
-    </div>
+<section>
+<h4 style="margin-bottom: 20px;margin-top: 20px;">NEW VIDEOS - This page is updated everyday with new pron videos!</h4>
+<div class="row" style="margin-bottom: 30px;">
+	<div class="col-xs-9" style="">
+	
+		<?php 
+		
+			/* @var $movie \Models\Entities\Movie */
+			foreach ($this->movies as $movie):
+			$cover = $movie->getCover() ? "$baseUrl/uploaded-images/{$movie->getCover()->getRealKey()}": "$baseUrl/images/no-cover.jpg";
+			?>
+			
+		<div class="movie-thumbnail">			
+			<img src="<?php echo "$cover"?>" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="<?php echo "$baseUrl/movie/{$movie->getId()}/{$movie->getFriendlyName()}"?>">
+					<?php echo $movie->getMovieName()?>
+				</a>
+			</p>
+		</div>
+			
+			<?php 	
+			endforeach;
+		?>
+		
+		
+	
+		
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/a5/03/c3/a503c393ec86545655e92c2a6c2cb870/a503c393ec86545655e92c2a6c2cb870.26.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/da/96/99/da96992be25568dc2196cafa32ad3978/da96992be25568dc2196cafa32ad3978.29.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/51/5f/91/515f9118dfed883239e172bf28526be3/515f9118dfed883239e172bf28526be3.8.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/ad/fb/b7/adfbb77a47f875633239054d8ceaa2cf/adfbb77a47f875633239054d8ceaa2cf.11.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/d4/42/dd/d442dd600166c23684d524dc3e16b1f4/d442dd600166c23684d524dc3e16b1f4.23.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/12/7b/60/127b60c23be8d3566fb007b5176e845b/127b60c23be8d3566fb007b5176e845b.2.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/60/23/f0/6023f0b501bc90ba06acdcd4fcf426e8/6023f0b501bc90ba06acdcd4fcf426e8.26.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		
+		
+		<div class="movie-thumbnail">
+			
+			<img src="http://img100.xvideos.com/videos/thumbs/4d/c5/bb/4dc5bbe7cc1df0fae62d33764ff2ec32/4dc5bbe7cc1df0fae62d33764ff2ec32.2.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/a5/03/c3/a503c393ec86545655e92c2a6c2cb870/a503c393ec86545655e92c2a6c2cb870.26.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/da/96/99/da96992be25568dc2196cafa32ad3978/da96992be25568dc2196cafa32ad3978.29.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/51/5f/91/515f9118dfed883239e172bf28526be3/515f9118dfed883239e172bf28526be3.8.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/ad/fb/b7/adfbb77a47f875633239054d8ceaa2cf/adfbb77a47f875633239054d8ceaa2cf.11.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/d4/42/dd/d442dd600166c23684d524dc3e16b1f4/d442dd600166c23684d524dc3e16b1f4.23.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/12/7b/60/127b60c23be8d3566fb007b5176e845b/127b60c23be8d3566fb007b5176e845b.2.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		<div class="movie-thumbnail">
+			<img src="http://img100.xvideos.com/videos/thumbs/60/23/f0/6023f0b501bc90ba06acdcd4fcf426e8/6023f0b501bc90ba06acdcd4fcf426e8.26.jpg" 
+			alt="..." class="img-thumbnail" style="width: 98%;">
+			<p style="padding: 5px 10px;">
+				<a href="">
+					Cute Hina Hinako gives a hot blowjob!
+				</a>
+			</p>
+		</div>
+		
+		<div style="clear:both; width: 100%; position: relative;">
+			<img alt="..." src="http://www.soccersuck.com/ss/ads/2009/sbowin99.gif" style="width: 100%;">
+			<img alt="..." src="http://www.soccersuck.com/ss/ads/2009/sbomaster728x90.gif" style="width: 100%;">
+			<img alt="..." src="http://www.soccersuck.com/ss/ads/2009/sbo-th.gif" style="width: 100%;">
+		</div>
+		
+	</div>
+	<div class="col-xs-3">
+	
+	<!--  
+	<img src="http://upic.me/i/61/xd138.gif" 
+		style="width: 50%;">
+		
+		<img src="http://upic.me/i/2q/sbobet89.gif"
+		style="width: 50%;">
+		-->
+		
+		
+		<img src="http://upic.me/i/fl/sbobet555.gif" 
+		style="width: 100%;">
+		<img src="http://www.soccersuck.com/ss/ads/2009/sbothai240x240.gif" 
+		style="width: 100%;">
+	</div>
 </div>
+
+
+
+</section>
