--- a/application/views/scripts/manage/add-new-type.phtml
+++ b/application/views/scripts/manage/add-new-type.phtml
@@ -17,6 +17,12 @@
       <input type="text" class="form-control" id="inputEmail3" placeholder="Description" name="description">
     </div>
   </div>
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Sorting Order</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="" value="5" name="sortingOrder" style="width: 100px;">
+    </div>
+  </div>
   
   
   <div class="form-group">
