--- a/application/views/scripts/manage/types.phtml
+++ b/application/views/scripts/manage/types.phtml
@@ -5,22 +5,24 @@
 <br /><br />
 <table class="table table-bordered table-condense">
 	<thead>
-		<tr>
-			<th width="10%" class="text-center">id</th>
+		<tr style="background-color: #8e44ad;color:white;">
 			<th width="30%">Name</th>
 			<th width="40%">Description</th>
-			<th width="20%">#action</th>
+			<th width="10%">Sorting</th>
+			<th width="20%"></th>
 		</tr>
 	</thead>
 	<tbody>
 	<?php 
+	$i = 0;
+	$bgColor = "#9b59b6";
 	foreach ($this->types as $type):
 	/* @var $type \Models\Entities\Type */
 	?>
-		<tr <?php if(! $type->getIsActive()) echo 'class="danger"';?>>
-			<td class="text-center"><?php echo $type->getId() ?></td>
+		<tr <?php if(! $type->getIsActive()) echo 'class="danger"';?> <?php if(($i++)%2!=0) echo 'style="background-color:'.$bgColor.'";' ?>>
 			<td><?php echo $type->getName() ?></td>
 			<td><?php echo $type->getDescription() ?></td>
+			<td><?php echo $type->getSortingOrder() ?></td>
 			<?php if(!$type->getIsActive()){?>
 				<td class="text-center"><a href="<?php echo "$baseUrl/manage-processor/restore-type?id=".$type->getId();?>" class="btn btn-primary">Restore</a></td>
 			<?php }else{?>
