--- a/application/views/scripts/manage/update-type.phtml
+++ b/application/views/scripts/manage/update-type.phtml
@@ -19,6 +19,12 @@
     <input type="text" class="form-control" id="inputEmail3" placeholder="Description" name="description" value="<?php echo $this->type->getDescription(); ?>">
     </div>
   </div>
+  <div class="form-group">
+    <label for="inputEmail3" class="col-sm-2 control-label">Sorting Order</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="" name="sortingOrder" style="width: 100px;" value="<?php echo $this->type->getSortingOrder(); ?>">
+    </div>
+  </div>
   
   
   <div class="form-group">
