--- a/application/views/scripts/manage/update-movie.phtml
+++ b/application/views/scripts/manage/update-movie.phtml
@@ -54,7 +54,9 @@
    <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Cover Image</label>
     <div class="col-sm-10">
+    <?php if($this->movie->getCover()!=""){?>
     	<img alt="cover" style="height: 75px;" src="<?php echo $baseUrl.'/uploaded-images/'.$this->movie->getCover()->getRealKey()?>">
+    <?php }?>
     	<div style="clear: both;"></div><br />
     	<input type="file" name="cover" class="form-control">
     </div>
