--- a/application/views/scripts/_layouts/default.phtml
+++ b/application/views/scripts/_layouts/default.phtml
@@ -19,6 +19,7 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 
 <link href="<?php echo $baseUrl;?>/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 <link href="<?php echo $baseUrl;?>/bootstrap/css/non-responsive.css" rel="stylesheet" />
+<link href="//vjs.zencdn.net/4.2/video-js.css" rel="stylesheet">
 <link href="<?php echo $baseUrl;?>/css/front.css" rel="stylesheet" />
 <?php echo $layoutManager->getAdditionalCssString()?>
 <?php echo $layoutManager->getAdditionalHeaderTagString()?>
@@ -41,13 +42,16 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 
 <script src="<?php echo $baseUrl;?>/js/jquery.js"></script>
 <script src="<?php echo $baseUrl;?>/bootstrap/js/bootstrap.min.js"></script>
+<script src="//vjs.zencdn.net/4.2/video.js"></script>
 <script src="<?php echo $baseUrl;?>/js/front.js"></script>
 <script type="text/javascript">
-	addDocumentReady(function(){
-		if($('.prettyphoto')[0]){
-			$('.prettyphoto').prettyPhoto();			
+$(document).ready(function() {
+	documentReady.forEach(function(entry){
+		if(typeof entry == 'function'){
+			entry();
 		}
 	});
+});
 </script>
 <?php echo $layoutManager->getAdditionalJavascriptString()?>
 <?php echo $layoutManager->getContentScript(); ?>
