--- a/application/views/scripts/manage/add-new-movie.phtml
+++ b/application/views/scripts/manage/add-new-movie.phtml
@@ -38,16 +38,9 @@
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality File</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Movie Url</label>
     <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality File URL" name="lowQualityFile">
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">High Quality File</label>
-    <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality File URL" name="highQualityFile">
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Movie URL" name="realUrl">
     </div>
   </div>
   
