--- a/application/views/scripts/manage/update-movie.phtml
+++ b/application/views/scripts/manage/update-movie.phtml
@@ -38,16 +38,9 @@
   </div>
   
   <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">Low Quality File</label>
+    <label for="inputEmail3" class="col-sm-2 control-label">Movie Url</label>
     <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="Low Quality File URL" name="lowQualityFile" value="<?php echo $this->movie->getLowQualityFile() ?>">
-    </div>
-  </div>
-  
-  <div class="form-group">
-    <label for="inputEmail3" class="col-sm-2 control-label">High Quality File</label>
-    <div class="col-sm-10">
-    	<input type="text" class="form-control" id="inputEmail3" placeholder="High Quality File URL" name="highQualityFile" value="<?php echo $this->movie->getHighQualityFile() ?>">
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Movie URL" name="realUrl">
     </div>
   </div>
   
