gg fix up movie url and image

--- a/application/views/scripts/manage/add-new-movie.phtml
+++ b/application/views/scripts/manage/add-new-movie.phtml
@@ -44,17 +44,17 @@
     </div>
   </div>
   
-  <div class="form-group">
+ <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Cover Image</label>
     <div class="col-sm-10">
-    	<input type="file" name="cover" class="form-control">
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Cover Image URL" name="cover">
     </div>
   </div>
   
   <div class="form-group">
     <label for="inputEmail3" class="col-sm-2 control-label">Screen Shot</label>
     <div class="col-sm-10">
-    	<input type="file" name="screenShot[]" multiple="multiple" class="form-control">
+    	<input type="text" class="form-control" id="inputEmail3" placeholder="Screen Shot URL" name="screenShot">
     </div>
   </div>
   
