--- a/application/views/scripts/watch/index.phtml
+++ b/application/views/scripts/watch/index.phtml
@@ -1,8 +1,11 @@
 <?php 
-	$baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
+	use Models\Services\VideoService;
+$baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 	/* @var $movie \Models\Entities\Movie */
 	$movie = $this->movie;
-	$cover = $movie->getCover() ? "$baseUrl/uploaded-images/{$movie->getCover()->getRealKey()}": "$baseUrl/images/no-cover.jpg";
+// 	$cover = $movie->getCover() ? "$baseUrl/uploaded-images/{$movie->getCover()->getRealKey()}": "$baseUrl/images/no-cover.jpg";
+	$cover = $movie->getCoverUrl();
+	$vids = unserialize($movie->getProcessedUrl());
 ?>
 
 <section>
@@ -11,12 +14,19 @@
 	<div class="row" style="margin-bottom: 30px;">
 		<div class="col-xs-9" style="">
 			<div style="margin-left: 30px;">
-			<video id="example_video_1" class="video-js vjs-default-skin"
+			<video id="main-vid" class="video-js vjs-default-skin"
 				controls preload="auto" width="640" height="360"
 				poster="<?php echo $cover?>"
-				data-setup='{"example_option":true}'>
-				<source src="http://r2---sn-30a7en7z.googlevideo.com/videoplayback?id=ed08610256a25fd1&itag=22&source=picasa"
-					type='video/mp4' />
+				data-setup='{}'>
+				<?php 
+				$default = 'data-default="true"';
+				foreach ($vids as $res=>$vid):?>
+					<source data-res="<?php echo $res?>" src="<?php echo $vid;?>"
+					type="video/mp4" <?php echo $default;?> />
+				
+				<?php 
+				$default = '';
+				endforeach;?>
 			</video>
 			</div>
 	
@@ -64,5 +74,11 @@
 		$('.movie').click(function(){
 			window.location.href=$(this).find('a').attr('href');
 		});
+
+		vjs('main-vid', {
+	        plugins: {
+	          resolutions: true
+	        }
+	    });
 	});
 </script>
