--- a/application/views/scripts/manage/login.phtml
+++ b/application/views/scripts/manage/login.phtml
@@ -1,4 +1,27 @@
-<br /><br />
+<?php $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();?>
+<br />
+<br />
 <div id="view-content">
-	<p>View script for controller <b>Manage</b> and script/action name <b>login</b></p>
+	<form class="form-horizontal" role="form" method="post" action="<?php echo "$baseUrl/manage-processor/login"?>">
+		<div class="form-group">
+			<label for="inputEmail3" class="col-sm-2 control-label">Username</label>
+			<div class="col-sm-5">
+				<input type="text" class="form-control" id="inputEmail3" name="username"
+					placeholder="Username">
+			</div>
+		</div>
+		<div class="form-group">
+			<label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+			<div class="col-sm-5">
+				<input type="password" class="form-control" id="inputPassword3" name="password"
+					placeholder="Password">
+			</div>
+		</div>
+		21232f297a57a5a743894a0e4a801fc3
+		<div class="form-group">
+			<div class="col-sm-offset-2 col-sm-10">
+				<button type="submit" class="btn btn-default">Sign in</button>
+			</div>
+		</div>
+	</form>
 </div>
