--- a/application/views/scripts/_global/header.phtml
+++ b/application/views/scripts/_global/header.phtml
@@ -28,7 +28,7 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 	
 	
 	
-	
+<div>
 <nav class="navbar navbar-default" role="navigation" id="navbar" style="margin-left: -15px; margin-right: -15px;">
     <ul class="nav navbar-nav">
     <?php 
@@ -38,4 +38,5 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
     ?>
     </ul>
 </nav>
+</div>
 </header>
