--- a/application/views/scripts/_layouts/backend.phtml
+++ b/application/views/scripts/_layouts/backend.phtml
@@ -17,6 +17,7 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 
 
 <link href="<?php echo $baseUrl;?>/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+<link href="<?php echo $baseUrl;?>/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet" />
 <link href="<?php echo $baseUrl;?>/bootstrap/css/non-responsive.css" rel="stylesheet" />
 <link href="<?php echo $baseUrl;?>/css/prettyPhoto.css" rel="stylesheet" />
 <?php echo $layoutManager->getAdditionalCssString()?>
