--- a/application/views/scripts/_layouts/default.phtml
+++ b/application/views/scripts/_layouts/default.phtml
@@ -18,6 +18,9 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 
 
 <link href="<?php echo $baseUrl;?>/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+
+<link href="<?php echo $baseUrl;?>/bootstrap/css/bootstrap-theme.css" rel="stylesheet" />
+
 <link href="<?php echo $baseUrl;?>/bootstrap/css/non-responsive.css" rel="stylesheet" />
 <link href="<?php echo $baseUrl;?>/video-js/video-js.min.css" rel="stylesheet">
 <link href="<?php echo $baseUrl;?>/video-js-res/video-js-resolutions.css" rel="stylesheet">
