--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -29,6 +29,9 @@
 			endforeach;
 		?>
 		
+		<div style="clear:both; margin:0 auto; text-align: center;">
+		<?php $this->navigation->render();?>
+		</div>
 		
 		<div style="clear:both; width: 100%; position: relative;">
 			<?php include 'ad2.php';?>
