--- a/application/views/scripts/category/index.phtml
+++ b/application/views/scripts/category/index.phtml
@@ -1,4 +1,3 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Category</b> and script/action name <b>index</b></p>
-</div>
+<?php 
+	echo $this->render('index/index.phtml');
+?>
