--- a/application/views/scripts/manage/movies.phtml
+++ b/application/views/scripts/manage/movies.phtml
@@ -28,10 +28,10 @@
 			<td><?php echo $movie->getDescription() ?></td>
 			<td><?php echo $movie->getCategory()->getName() ?></td>
 			<?php if(!$movie->getIsActive()){?>
-				<td class="text-center"><a href="<?php echo "$baseUrl/manage-processor/restore-movie?id=".$movie->getId();?>" class="btn btn-primary">Restore</a></td>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage-processor/restore-movie?id=".$movie->getId();?>" class="btn btn-primary btn-xs">Restore</a></td>
 			<?php }else{?>
-				<td class="text-center"><a href="<?php echo "$baseUrl/manage/update-movie?id=".$movie->getId();?>" class="btn btn-info">Update</a>
-			 	<a href="<?php echo "$baseUrl/manage-processor/delete-movie?id=".$movie->getId();?>" class="btn btn-danger">Delete</a></td>
+				<td class="text-center"><a href="<?php echo "$baseUrl/manage/update-movie?id=".$movie->getId();?>" class="btn btn-info btn-xs">Update</a>
+			 	<a href="<?php echo "$baseUrl/manage-processor/delete-movie?id=".$movie->getId();?>" class="btn btn-danger btn-xs">Delete</a></td>
 			<?php }?>
 			</tr>	
 	<?php 
