--- a/application/views/scripts/_layouts/default.phtml
+++ b/application/views/scripts/_layouts/default.phtml
@@ -8,8 +8,7 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 <head>
 <meta charset="UTF-8" />
 <meta name="author" content="Mapkuff">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="stats-in-th" content="029e" />
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
 <?php echo $layoutManager->getTitle()?>
 <?php echo $layoutManager->getDescription()?>
@@ -46,8 +45,10 @@ $baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl();
 
 <script src="<?php echo $baseUrl;?>/js/jquery.js"></script>
 <script src="<?php echo $baseUrl;?>/bootstrap/js/bootstrap.min.js"></script>
+
 <script src="<?php echo $baseUrl;?>/video-js/video.dev.js"></script>
 <script src="<?php echo $baseUrl;?>/video-js-res/video-js-resolutions.js"></script>
+
 <script src="<?php echo $baseUrl;?>/js/front.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
