--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -6,7 +6,7 @@
 <section>
 <h4 style="margin-bottom: 20px;margin-top: 20px;">NEW VIDEOS - This page is updated everyday with new pron videos!</h4>
 <div class="row" style="margin-bottom: 30px;">
-	<div class="col-lg-9" style="">
+	<div class="col-lg-9 col-md-9 col-sm-9 col-xs-9" style="">
 	
 		<?php 
 		
@@ -33,13 +33,13 @@
 		</div>
 		
 	</div>
-	<div class="col-lg-3">
+	<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 		<div style="clear:both; width: 120%; position: relative; margin-left: -40px;">
 				<?php include 'ad1.php';?>
 		</div>
 	</div>
 	
-	<div class="col-lg-12" style="margin-top: 20px;">		
+	<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin-top: 20px;">		
 		<div style="clear:both; width: 100%; position: relative;">
 			<?php include 'ad2.php';?>
 		</div>
