--- a/public/css/front.css
+++ b/public/css/front.css
@@ -104,3 +104,6 @@ background-image: linear-gradient(to bottom,#c12e2a 0,#AA0D43 100%);
 	box-shadow: 0px 0px 10px 0px #2c3e50;
 }
 
+.vjs-default-skin .vjs-big-play-button {
+	font-size: 2em;
+}
